@@ -12,6 +12,7 @@ uoproxy (0.1.1) unstable; urgency=low
   * don't forward relay packet, connect to game server internally
   * show real character name while attaching
   * borrowed packet length table from wolfpack
+  * when reconnecting, connect to the login server
 
  --
 
